WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106149
Chromium windows compile fails because of the assertion in NodeRareData
https://bugs.webkit.org/show_bug.cgi?id=106149
Summary
Chromium windows compile fails because of the assertion in NodeRareData
Dima Gorbik
Reported
2013-01-04 16:35:49 PST
Assertion in NodeRareData.cpp fails most likely because of the differences in bitfield alignment across different compilers.
Attachments
Proposed fix 0.1
(1.65 KB, patch)
2013-01-04 16:41 PST
,
Dima Gorbik
no flags
Details
Formatted Diff
Diff
Proposed fix 0.2
(1.65 KB, patch)
2013-01-04 16:46 PST
,
Dima Gorbik
no flags
Details
Formatted Diff
Diff
Fixes the bug
(4.53 KB, patch)
2013-01-04 18:00 PST
,
Ryosuke Niwa
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dima Gorbik
Comment 1
2013-01-04 16:41:39 PST
Created
attachment 181406
[details]
Proposed fix 0.1
WebKit Review Bot
Comment 2
2013-01-04 16:45:31 PST
Attachment 181406
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/dom/NodeRareData.cpp:50: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dima Gorbik
Comment 3
2013-01-04 16:46:33 PST
Created
attachment 181411
[details]
Proposed fix 0.2
Ryosuke Niwa
Comment 4
2013-01-04 17:35:14 PST
Comment on
attachment 181411
[details]
Proposed fix 0.2 Not the right fix.
Ryosuke Niwa
Comment 5
2013-01-04 18:00:19 PST
Created
attachment 181415
[details]
Fixes the bug
Ryosuke Niwa
Comment 6
2013-01-04 18:01:29 PST
Comment on
attachment 181415
[details]
Fixes the bug Note that all these bit fields are protected. I’ve verified that both NodeRareData and ElementRareData have setters and getters for these booleans so we wouldn’t have a coercion problem.
Andreas Kling
Comment 7
2013-01-04 18:04:49 PST
Comment on
attachment 181415
[details]
Fixes the bug LGTM
Ryosuke Niwa
Comment 8
2013-01-04 18:06:23 PST
Committed
r138879
: <
http://trac.webkit.org/changeset/138879
>
Radar WebKit Bug Importer
Comment 9
2013-01-15 10:58:06 PST
<
rdar://problem/13017226
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug