Chromium windows compile fails because of the assertion in NodeRareData https://bugs.webkit.org/show_bug.cgi?id=106149

Reviewed by Andreas Kling.

MSVC adds padding between bitfields of different types for better alignment.
Since we care more about the memory usage, use unsigned for all bitfields to work around this behavior.

* dom/NodeRareData.cpp:
(SameSizeAsNodeRareData):
(WebCore):
* dom/NodeRareData.h:
(WebCore::NodeRareData::isWebVTTNode):
(WebCore::NodeRareData::isWebVTTFutureNode):
(NodeRareData):


Canonical link: https://commits.webkit.org/124350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138879 268f45cc-cd09-0410-ab3c-d52691b4dbfc